# cdk-aws-otlp-forwarder-cwl-lambda

./: .projenrc.ts  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.projen/: deps.json  tasks.json
src/functions/client-node/: index.old.ts  index.ts  ref.ts
src/functions/client-python/: index.py  pyproject.toml
src/functions/client-rust/: Cargo.toml
src/functions/forwarder/: Cargo.toml
src/functions/forwarder/src/: collectors.rs
src/functions/service/: Cargo.toml
src/stacks/: my-stack.ts
